[project]
name = "deployed_dags_glenb"
version = "0.0.2"
authors = [
  { name="Glen Haber", email="glen.haber@thebridgecorp.com" },
]
description = "Some Airflow DAGs to be deployed with pip"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Glen-Haber/packaging"
"Bug Tracker" = "https://github.com/Glen-Haber/packaging/issues"
[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"